# crps-conformal-regression

./: .gitignore  README.md  pyproject.toml  save_figures.py
demo-js/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo-js/src/: main.ts  plotly-dist-min.d.ts  presets.ts  rng.ts  style.css
demo-js/src/algorithms/: binning.ts  conformal.ts  selection.ts
demo-js/src/plots/: coverage.ts  fan.ts  kselect.ts  partition.ts  pvalue.ts  venn.ts
demo-js/src/worker/: compute.worker.ts  protocol.ts
docs/: index.html
docs/assets/: compute.worker-CE5DOLBY.js  index-5BzJThpL.css
experiments/: bimodal_coverage.py  bimodal_fig.py  competitors.py  data.py  fair_comparison.py  faithful_exp.py  mcycle_exp.py
src/crpsconfreg/: __init__.py  binning.py  conformal.py  predictor.py  selection.py
tests/: test_binning.py  test_conformal.py  test_predictor.py  test_selection.py
