[project]
name = "crpsconfreg"
version = "0.1.0"
description = "Optimal binning and conformal prediction for regression"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "scipy>=1.17.1",
]
demo = [
    "panel>=1.5",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
experiments = [
    "scikit-learn>=1.5",
    "quantile-forest>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.10",
    "scipy>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crpsconfreg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
